# open-data-health

./: .gitignore  README.md  pyproject.toml
airflow/dags/: dag_job_extract.py
health/etl/: extract.py
